test/ill-formed/0032_nonrestrict_array_param.c
void f (int a[static const 5]) {}
